--- a/JobAggregator/aggregator/templates/aggregator/statistics_page.html
+++ b/JobAggregator/aggregator/templates/aggregator/statistics_page.html
@@ -289,7 +289,25 @@
                                 </div>
                             </div>
                     </div>
+
+                <div class="col-md-4 mb-3">
+                            <div class="card h-100 border-success">
+                                <div class="card-body text-center">
+                                    <i class="fas fa-project-diagram fa-3x text-success mb-3"></i>
+                                    <h5 class="card-title">Деревья решений</h5>
+                                    <p class="card-text small text-muted">
+                                        Анализ с использованием деревьев решений для прогнозирования зарплаты
+                                    </p>
+                                    <a href="{% url 'decision_tree_analysis' %}" class="btn btn-outline-success">
+                                        Перейти к анализу
+                                    </a>
+                                </div>
+                            </div>
+                    </div>
+
                 </div>
+
+
 
 
 
